fix: hidden overflow-x on the body

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ html,
 body {
   overscroll-behavior: none;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
 
 body {
